[package]
name = "showfile"
version = "0.1.0"
edition = "2021"
description = "Show files in the local file manager"
license = "MIT"
documentation = "https://docs.rs/showfile"
homepage = "https://github.com/jf2048/showfile"
repository = "https://github.com/jf2048/showfile.git"
readme = "README.md"
keywords = ["show-file", "filemanager", "file-manager", "explorer", "finder"]
resolver = "2"

[features]
default = ["rustbus"]
rustbus = ["dep:rustbus", "dep:urlencoding"]
zbus = ["dep:zbus", "dep:urlencoding"]
gio = ["dep:glib-sys", "dep:gobject-sys", "dep:gio-sys"]

[target.'cfg(all(not(target_os = "macos"), not(windows)))'.dependencies]
gio-sys = { version = "0.18", optional = true }
glib-sys = { version = "0.18", optional = true }
gobject-sys = { version = "0.18", optional = true }
rustbus = { version = "0.19", optional = true }
urlencoding = { version = "2.1.3", optional = true }
zbus = { version = "3", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32_System_Com", "Win32_UI_Shell_Common"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

